--- a/02_ErrorToMail_Module/Web.config
+++ b/02_ErrorToMail_Module/Web.config
@@ -4,6 +4,36 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+
+	<system.webServer>
+		<modules>
+			<add name="_02_ErrorToMail_Module" type="_02_ErrorToMail_Module.Kidatel"/>
+		</modules>
+	</system.webServer>
+
+	
+
+
+	<appSettings>
+		<!-- *********************************************************************************** -->
+		<!-- ****************************** Begin email settings ******************************* -->
+		<!-- *********************************************************************************** -->
+		<add key="SMTPServer" value="smtp.mail.ru" />
+		<add key="SMTPRequiresAuthentication" value="false" />
+		<add key="SMTPUseSsl" value="true" />
+		<add key="SMTPPort" value="465" />
+		<add key="SMTPUser" value="rommel3@ukr.net" />
+		<add key="SMTPPassword" value="170882" />
+		<add key="SMTPTimeoutInMilliseconds" value="30000" />
+		<!-- Leave this blank for ASCII encoding. Allowed values are utf-8, utf-32, and unicode -->
+		<add key="SmtpPreferredEncoding" value="" />
+		<add key="IsKerioMailServer" value="true" />
+		<!-- *********************************************************************************** -->
+		<!-- ***************************** End Email settings ********************************** -->
+		<!-- *********************************************************************************** -->
+	</appSettings>
+	
+	
   <system.web>
     <compilation debug="true" targetFramework="4.7"/>
     <httpRuntime targetFramework="4.7"/>
